--- a/style/index.css
+++ b/style/index.css
@@ -2742,6 +2742,7 @@ textarea {
   letter-spacing: 1px;
   letter-spacing: 3px;
   text-align: center;
+  font-weight: 700;
   margin-bottom: 3.5rem;
   position: relative;
 }
@@ -2909,8 +2910,8 @@ textarea {
 .home-hero__socials {
   position: absolute;
   top: 50%;
-  border: 2px solid #eee;
-  border-left: 2px solid #eee;
+  /* border: 2px solid #eee;
+  border-left: 2px solid #eee; */
   transform: translateY(-50%);
 }
 @media only screen and (max-width: 56.25em) {
@@ -2936,7 +2937,7 @@ textarea {
   width: 100%;
   display: block;
   padding: 1.2rem;
-  border-bottom: 2px solid #eee;
+  /* border-bottom: 2px solid #eee; */
   transition: background 0.3s;
 }
 .home-hero__social-icon-link:hover {
@@ -2989,7 +2990,7 @@ textarea {
 }
 .about__content-title {
   font-weight: 700;
-  font-size: 2.8rem;
+  font-size: 3.8rem;
   margin-bottom: 3rem;
 }
 @media only screen and (max-width: 37.5em) {
@@ -3355,7 +3356,7 @@ textarea {
   display: block;
 }
 .header__logo-sub {
-  font-size: 1.8rem;
+  font-size: 1.9rem;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
