--- a/style/index.css
+++ b/style/index.css
@@ -18,7 +18,6 @@
   filter: grayscale(100%);
 }
 
-
 .snow {
   position: absolute;
   width: 10px;
@@ -2770,7 +2769,6 @@ textarea {
   }
 }
 
-
 .heading-sec__sexperience {
   color: #777;
   font-size: 2rem;
@@ -2816,8 +2814,7 @@ textarea {
   width: 92%;
 }
 
-
-.btn-experience { 
+.btn-experience {
   letter-spacing: 2px;
   /* color: #333; */
   text-transform: uppercase;
@@ -3188,7 +3185,7 @@ textarea {
       rgba(0, 98, 185, 0.8),
       rgba(0, 98, 185, 0.8)
     ),
-    url(/assets/svg/common-bg.svg);
+    url("../public/assets/png/backgrounds/patron1.png");
   background-size: cover;
   background-position: center;
   position: relative;
