--- a/style/principal.css
+++ b/style/principal.css
@@ -17,7 +17,7 @@ h1 {
 
 
 .text-parrafo { 
-  font-family: "texto";
+  font-family: "alternativa-1";
 }
 .text-estadistica { 
   font-family: "texto";
