--- a/style/index.css
+++ b/style/index.css
@@ -433,18 +433,25 @@ textarea {
 }
 
 .contact {
-  background: linear-gradient(
+  /* background: linear-gradient(
       to right,
       rgba(0, 98, 185, 0.8),
       rgba(0, 98, 185, 0.8)
     ),
+    url(/assets/svg/common-bg.svg); */
+    background: linear-gradient(
+      to right,
+      #0e1b71,
+      rgba(0, 98, 185, 0.6)
+    ),
     url(/assets/svg/common-bg.svg);
+
+ 
   background-size: cover;
   background-position: center;
 }
 .contact__form-container {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background: white;
   padding: 4rem;
   margin-top: 6rem;
   max-width: 80rem;
@@ -467,7 +474,7 @@ textarea {
   }
 }
 .contact__form-label {
-  color: #666;
+  color: #ffffff;
   font-size: 1.4rem;
   letter-spacing: 1px;
   font-weight: 700;
@@ -888,7 +895,25 @@ textarea {
   border-radius: 5px;
   font-weight: 600;
   color: #777;
+  transition: all .4s;
 }
+
+.skills__skill:hover  img,p{
+  transition: all .4s;
+}
+
+.skills__skill:hover {
+  padding: 1rem 4rem;
+}
+
+.skills__skill:hover  img{
+  left: 24px;
+}
+.skills__skill:hover p{
+  margin-left: 6px;
+}
+
+
 
 .mouse {
   width: 25px;
