mejora de tarjetas/animaciones

--- a/style/efectos.css
+++ b/style/efectos.css
@@ -1,5 +1,7 @@
 .background-inicio-delay {
-
+    background-image: url("/assets/png/backgrounds/cover_hexagonal.png");
+    background-size: cover;
+  background-position: center; 
     animation: delay-opacity .5s forwards;
 }
 
