--- a/style/principal.css
+++ b/style/principal.css
@@ -18,7 +18,6 @@
 body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "texto-general";
-
 }
 
 .text-parrafo {
@@ -43,6 +42,12 @@ body {
   border-top: 60px solid transparent; /* Tamaño del triángulo */
   border-bottom: 60px solid transparent;
   border-left: 56.6px solid #efefef; /*#efefef Altura del triángulo, calculada como la mitad de la base por la altura de un triángulo equilátero */
+}
+
+.bg-dinamic-project {
+  background-size: cover;
+  background: url("../public/assets/png/backgrounds/cover_proyectos.png");
+  background-repeat: no-repeat;
 }
 
 /* .estadistica-animacion-hover:hover p,
