--- a/style/font.css
+++ b/style/font.css
@@ -4,10 +4,23 @@
 }
 
 @font-face {
-    font-family: "quicksand-thin";
-    src: url("/fonts/open-sans-cyrillic-500-normal.ttf");
-  }
-  
+  font-family: "quicksand-thin";
+  src: url("/fonts/open-sans-cyrillic-500-normal.ttf");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 300;
+  font-stretch: 100%;
+  src: url(https://fonts.gstatic.com/s/opensans/v40/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTSOmu1aB.woff2)
+    format("woff2");
+  unicode-range: U+1F00-1FFF;
+}
+
+h2 { 
+  font-family: "Open Sans";
+}
 /* h1 {
   font-family: "quicksand-tittle";
 } */
@@ -16,6 +29,6 @@
   font-family: "quicksand-tittle";
 }
 
-.thin-texto { 
-    font-family: "quicksand-thin";
+.thin-texto {
+  font-family: "quicksand-thin";
 }
