--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,6 @@
   filter: grayscale(100%);
 }
 
-
 *,
 *::after,
 *::before {
@@ -45,36 +44,6 @@
   padding: 0;
   box-sizing: inherit;
   font-family: inherit;
-}
-
-html {
-  font-size: 62.5%;
-  scroll-behavior: smooth;
-}
-@media only screen and (max-width: 75em) {
-  html {
-    font-size: 59%;
-  }
-}
-@media only screen and (max-width: 56.25em) {
-  html {
-    font-size: 56%;
-  }
-}
-@media only screen and (min-width: 112.5em) {
-  html {
-    font-size: 65%;
-  }
-}
-
-body {
-  box-sizing: border-box;
-  position: relative;
-  line-height: 1.5;
-  font-family: sans-serif;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  font-family: "Source Sans Pro", sans-serif;
 }
 
 a {
@@ -99,41 +68,7 @@ textarea {
   letter-spacing: 3px;
   text-align: center;
 }
-@media only screen and (max-width: 37.5em) {
-  .heading-primary {
-    font-size: 4.5rem;
-  }
-}
 
-.heading-sec__mb-bg {
-  margin-bottom: 11rem;
-}
-@media only screen and (max-width: 56.25em) {
-  .heading-sec__mb-bg {
-    margin-bottom: 8rem;
-  }
-}
-
-.heading-sec__mb-med {
-  margin-bottom: 9rem;
-}
-@media only screen and (max-width: 56.25em) {
-  .heading-sec__mb-med {
-    margin-bottom: 8rem;
-  }
-}
-
-.heading-sec__main {
-  display: block;
-  font-size: 4rem;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  letter-spacing: 3px;
-  text-align: center;
-  font-weight: 700;
-  margin-bottom: 3.5rem;
-  position: relative;
-}
 .heading-sec__main--lt {
   color: #fff;
 }
@@ -256,37 +191,6 @@ textarea {
   }
 }
 
-.text-primary {
-  color: #fff;
-  font-size: 2.2rem;
-  text-align: center;
-  width: 100%;
-  line-height: 1.6;
-}
-@media only screen and (max-width: 37.5em) {
-  .text-primary {
-    font-size: 2rem;
-  }
-}
-
-.d-none {
-  display: none;
-}
-
-.home-hero {
-  color: #fff;
-  background: linear-gradient(
-      to right,
-      rgba(0, 98, 185, 0.8),
-      rgba(0, 98, 185, 0.8)
-    ),
-    url(/assets/svg/common-bg.svg);
-  background-position: center;
-  height: 100vh;
-  min-height: 80rem;
-  max-height: 120rem;
-  position: relative;
-}
 @media only screen and (max-width: 37.5em) {
   .home-hero {
     height: unset;
@@ -299,11 +203,6 @@ textarea {
   /* border: 2px solid #eee;
   border-left: 2px solid #eee; */
   transform: translateY(-50%);
-}
-@media only screen and (max-width: 56.25em) {
-  .home-hero__socials {
-    display: none;
-  }
 }
 .home-hero__mouse-scroll-cont {
   position: absolute;
@@ -342,22 +241,6 @@ textarea {
   transform: translate(-50%, -50%);
   max-width: 90rem;
   width: 92%;
-}
-@media only screen and (max-width: 37.5em) {
-  .home-hero__content {
-    padding: 19rem 0 13rem 0;
-    margin: auto;
-    position: static;
-    transform: translate(0, 0);
-  }
-}
-.home-hero__info {
-  margin: 3rem auto 0 auto;
-  max-width: 80rem;
-}
-.home-hero__cta {
-  margin-top: 5rem;
-  text-align: center;
 }
 
 .about {
@@ -426,14 +309,9 @@ textarea {
       rgba(0, 98, 185, 0.8)
     ),
     url(/assets/svg/common-bg.svg); */
-    background: linear-gradient(
-      to right,
-      #0e1b71,
-      rgba(0, 98, 185, 0.6)
-    ),
+  background: linear-gradient(to right, #0e1b71, rgba(0, 98, 185, 0.6)),
     url(/assets/svg/common-bg.svg);
 
- 
   background-size: cover;
   background-position: center;
 }
@@ -866,32 +744,12 @@ textarea {
 }
 .skills__skill {
   padding: 1rem 2rem;
-  margin-bottom: 1.5rem;
-  margin-right: 1.5rem;
-  font-size: 1.6rem;
   background: rgba(153, 153, 153, 0.2);
   border-radius: 5px;
   font-weight: 600;
   color: #777;
-  transition: all .4s;
+  transition: all 0.4s;
 }
-
-.skills__skill:hover  img,p{
-  transition: all .4s;
-}
-
-.skills__skill:hover {
-  padding: 1rem 4rem;
-}
-
-.skills__skill:hover  img{
-  left: 24px;
-}
-.skills__skill:hover p{
-  margin-left: 6px;
-}
-
-
 
 .mouse {
   width: 25px;
